2010-06-28  Jan Djärv  <jan.h.d@swipnet.se>

	* dynamic-setting.el (font-setting-change-default-font): Remove
	call to message.

2010-06-28  Kenichi Handa  <handa@m17n.org>

	* international/quail.el (quail-insert-kbd-layout): Fix the
	showing of untranslated characters.

2010-06-28  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (delete-active-region): New option.
	(delete-backward-char): Implement in Lisp.
	(delete-forward-char): New command.

	* mouse.el (mouse-region-delete-keys): Deleted.
	(mouse-show-mark): Simplify.

	* bindings.el (global-map): Bind delete and DEL, the former to
	delete-forward-char.

2010-01-16  Lennart Borgman  <lennart.borgman@gmail.com>

	* progmodes/ruby-mode.el (ruby-mode-map): Don't bind TAB.
	(ruby-mode): Bind indent-line-function (Bug#5119).

2010-06-27  Chong Yidong  <cyd@stupidchicken.com>

	* startup.el (command-line): Recognize "0" X resource value.

2010-06-27  Chong Yidong  <cyd@stupidchicken.com>

	* startup.el (command-line): Use X resources to set the value of
	menu-bar-mode and tool-bar-mode, before calling frame-initialize.

	* menu-bar.el (menu-bar-mode):
	* tool-bar.el (tool-bar-mode): Don't change default-frame-alist.
	Set init-value to t.

	* frame.el (frame-notice-user-settings): Don't change
	default-frame-alist based on menu-bar-mode and tool-bar-mode, or
	vice versa (Bug#2249).

2010-06-26  Eli Zaretskii  <eliz@gnu.org>

	* w32-fns.el (w32-convert-standard-filename): Doc fix.

2010-06-25  Agustín Martín  <agustin.martin@hispalinux.es>

	* flyspell.el (flyspell-check-previous-highlighted-word): Make
	sure `flyspell-word' re-checks word after function run (Bug#6504).

	* ispell.el (ispell-init-process): Make sure ispell and default
	directories are expanded. (Bug#6143).

2010-06-24  Juri Linkov  <juri@jurta.org>

	* minibuffer.el (completions-format): Change default from nil to
	`horizontal'.  Remove `nil' value from :type.  Doc fix.  (Bug#6459)

2010-06-24  Juri Linkov  <juri@jurta.org>
